# SecureUxTheme

./: .clang-format  .gitignore  .gitmodules  AVRF.md  CMakeLists.txt  LICENSE  LICENSE.md  Package.wxs  README.md  SecureUxTheme.sln  SecureUxTheme.wixproj  bin2h.ps1  installer.nsi  make_release.bat
.github/ISSUE_TEMPLATE/: issue-report.md
.github/workflows/: ci.yml
NtdllCrt/: NtdllCrt.vcxproj  NtdllCrt.vcxproj.filters  ntdll.def
SecureUxTheme/: CMakeLists.txt  SecureUxTheme.vcxproj  SecureUxTheme.vcxproj.filters  avrf.cpp  chores.cpp  hooks.cpp  pch.h  verifier.h
SecureUxTheme/lib/Win32/: ntdll.def  ntdll.exp  ntdll.lib
SecureUxTheme/lib/x64/: ntdll.def  ntdll.exp  ntdll.lib
ThemeDll/: ThemeDll.vcxproj  ThemeDll.vcxproj.filters  dllmain.cpp  exports.def  resource.h  resource.rc
ThemeInvalidSigner/: ThemeInvalidSigner.c  ThemeInvalidSigner.vcxproj  ThemeInvalidSigner.vcxproj.filters  main.cpp
ThemeLib/: ThemeLib.vcxproj  ThemeLib.vcxproj.filters  install.cpp  signature.cpp  theme.cpp  themelib.cpp
ThemeLib/public/: secureuxtheme.h  themetool.h
ThemeTool/: CMakeLists.txt  MainDialog.cpp  MainDialog.h  ThemeTool.rc  ThemeTool.vcxproj  ThemeTool.vcxproj.filters  dlg.h  interfaces.h  main.cpp  main.h  pch.cpp  pch.h  resource.h  signature.cpp  signature.h  stringencrypt.h  targetver.h  utl.cpp  utl.h
ThemeTool/dll/: dllmain.cpp
ThemeTool/embedded/: README.md  embedded.rc
ThemeTool/exe/: MainDialog.cpp  MainDialog.h  ThemeTool.rc  dlg.h  main.cpp  pch.h  targetver.h  utl.cpp  utl.h
ThemeTool/lib/: install.cpp  signature.cpp  theme.cpp
ThemeTool/lib/public/: secureuxtheme.h  themetool.h
ThemeUiProxy/: dll.cpp
public/: secureuxtheme.h  themetool.h
re/: ITheme_1809.txt  ITheme_1903.txt  ITheme_win7.txt  ITheme_win81_to_1507.txt
resources/: RECOVERY.md
